--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Install graphvix(dot)
+      run: sudo apt-get update && sudo apt-get -y install graphviz
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
